fix: configure Vercel SSR deployment for TanStack Start
- Remove target: 'static' to enable proper SSR mode
- Add enhanced prerender config with crawlLinks and autoSubfolderIndex
- Create Vercel API handler for server-side rendering
- Update Vercel config for Node.js runtime support
- Fix 404 issues by enabling proper server-side routing

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,16 @@
 {
   "buildCommand": "pnpm run build",
-  "outputDirectory": ".output/public",
-  "devCommand": "pnpm run dev",
-  "installCommand": "pnpm install"
+  "devCommand": "pnpm run dev", 
+  "installCommand": "pnpm install",
+  "functions": {
+    ".output/server/index.mjs": {
+      "runtime": "nodejs20.x"
+    }
+  },
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/api/index"
+    }
+  ]
 }
