fix: simplify Vercel deployment configuration
- Remove problematic Vercel function configuration causing runtime errors
- Simplify TanStack Start prerender config to basic enabled: true
- Remove API handler that was causing conflicts
- Return to simple static file deployment with .output/public
- Fix Function Runtimes validation error

--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,6 @@
 {
   "buildCommand": "pnpm run build",
-  "devCommand": "pnpm run dev", 
-  "installCommand": "pnpm install",
-  "functions": {
-    ".output/server/index.mjs": {
-      "runtime": "nodejs20.x"
-    }
-  },
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/api/index"
-    }
-  ]
+  "outputDirectory": ".output/public",
+  "devCommand": "pnpm run dev",
+  "installCommand": "pnpm install"
 }
