--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,28 @@
-node_modules
+# deps
+/node_modules
 
+# generated content
+.contentlayer
+.content-collections
+.source
+
+# test & build
+/coverage
+/.next/
+/out/
+/build
+*.tsbuildinfo
+
+# misc
 .DS_Store
-.cache
-.vercel
-.output
-.nitro
-/build/
+*.pem
+/.pnp
+.pnp.js
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-.tanstack
+# others
+.env*.local
+.vercel
+next-env.d.ts
