--- a/package.json
+++ b/package.json
@@ -1,35 +1,31 @@
 {
-  "name": "example-tanstack-start",
+  "name": "milo-blog",
+  "version": "0.0.0",
   "private": true,
-  "sideEffects": false,
-  "type": "module",
   "scripts": {
-    "dev": "vite dev",
-    "build": "vite build && tsc --noEmit && echo '{\"version\":3}' > .vercel/output/config.json",
-    "start": "node .output/server/index.mjs"
+    "build": "next build",
+    "dev": "next dev --turbo",
+    "start": "next start",
+    "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
-    "@tanstack/react-router": "^1.131.30",
-    "@tanstack/react-router-devtools": "^1.131.30",
-    "@tanstack/react-start": "^1.131.30",
-    "fumadocs-core": "15.7.10",
-    "fumadocs-mdx": "11.9.0",
-    "fumadocs-ui": "15.7.10",
-    "lucide-static": "^0.542.0",
+    "next": "15.5.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tailwind-merge": "^3.3.1",
-    "vite": "^7.1.3"
+    "fumadocs-ui": "15.7.10",
+    "fumadocs-core": "15.7.10",
+    "fumadocs-mdx": "11.9.0"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "^4.1.12",
-    "@types/node": "^24.3.0",
+    "@types/node": "24.3.1",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.2",
-    "tailwindcss": "^4.1.12",
     "typescript": "^5.9.2",
-    "vercel": "^47.0.5",
-    "vite-tsconfig-paths": "^5.1.4"
+    "@types/mdx": "^2.0.13",
+    "@tailwindcss/postcss": "^4.1.13",
+    "tailwindcss": "^4.1.13",
+    "postcss": "^8.5.6",
+    "eslint": "^8",
+    "eslint-config-next": "15.5.2"
   }
 }
