--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
     "postcss": "^8.5.6",
     "eslint": "^8",
     "eslint-config-next": "15.5.2"
+  },
+  "pnpm": {
+    "overrides": {
+      "debug": "4.4.1"
+    }
   }
 }
